--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -309,7 +309,7 @@
         global:
           home_path: /home/admin/obagent
       ocp-express:
-        depeneds:
+        depends:
           - oceanbase-ce
           - obproxy-ce
           - obagent
