--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -145,10 +145,10 @@ obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nf
 
 目的端状态及说明如下表所示。
 
-| 状态         | 描述                                                              |
-|-------------|-------------------------------------------------------------------|
-| ENABLE      | 目的端处于启用状态。若处于该归档模式下，但还没有归档，将会开始归档任务。 |
-| DEFER       | 目的端处于暂停状态。若处于该归档模式下，并且有归档任务，将会暂停归档任务。 |
+| 状态         | 描述                                                                    |
+|-------------|-------------------------------------------------------------------------|
+| ENABLE      | 目的端的归档处于启用状态。若处于该状态的归档模式下，但还没有归档，系统将会开始归档任务。 |
+| DEFER       | 目的端的归档处于暂停状态。若处于该状态的归档模式下，并且有归档任务，系统将会暂停归档任务。 |
 
 可以根据实际情况，将目的端状态设置为 `DEFER` 或 `ENABLE` 状态，具体操作如下：
 
@@ -159,9 +159,9 @@ obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nf
    <p>MySQL 模式的管理员用户为 <code>root</code> 用户，Oracle 模式的管理员用户为 <code>SYS</code> 用户。</p>
    </main>
 
-2. 根据实际使用场景，启动或暂停目的端归档。
+2. 根据实际使用场景，启动或暂停目的端的归档。
 
-   * 启动目的端归档。
+   * 启动目的端的归档。
 
      语句如下：
 
@@ -171,7 +171,7 @@ obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nf
 
      设置后，在该租户打开归档模式后，将会开始归档任务，将日志归档到该目的端指定的路径中。若在设置前已经处于归档模式，将会自动开始归档任务。
 
-   * 暂停目的端归档。
+   * 暂停目的端的归档。
   
      语句如下：
 
