--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/1.create-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/1.create-a-dblink-of-oracle-mode.md
@@ -103,7 +103,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@tenant IDENTIFIED BY 
 
 ## 创建 OceanBase 数据库到 Oracle 数据库的 DBLink
 
-如果要访问远端的 Oracle 数据库，您可以创建 OceanBase 数据库的 Oracle 租户到 Oracle 数据库的 DBLink。当前 DBLink 仅支持只读操作。
+如果要访问远端的 Oracle 数据库，您可以创建 OceanBase 数据库的 Oracle 租户到 Oracle 数据库的 DBLink。
 
 创建 DBLink 需要指定 DBLink 名称并且提供远端数据库的用户名、租户名、密码、IP 地址、端口号以及访问类型等信息。DBLink 写数据功能中有一个反向 Link 特性，反向 Link 特性主要用于远端数据库访问本地数据库的对象，对象包括表、视图和同义词等。OceanBase 数据库到 Oracle 数据库的 DBLink 暂不支持反向 Link 特性。
 
