--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
@@ -4,13 +4,13 @@
 
 ## 操作步骤
 
-DBLink 创建成功后，执行以下语句，查询 `GV$DBLINK` 视图，查看已创建的 DBLink。
+DBLink 创建成功后，可以通过 `DBA_DB_LINKS`、`ALL_DB_LINKS`、`USER_DB_LINKS` 等视图查看已创建的 DBLink。
 
 ```sql
-obclient> SELECT * FROM GV$DBLINK;
+SELECT * FROM USER_DB_LINKS;
 ```
 
-有关 `GV$DBLINK` 视图字段的更多说明信息，参见 [GV$DBLINK](../../../../5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/14.gv-dblink-of-oracle-mode.md)。
+有关 `DBA_DB_LINKS`、`ALL_DB_LINKS`、`USER_DB_LINKS` 等视图中字段的详细说明信息，请参见 [DBA_DB_LINKS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/282.dba_db_links.md)、[ALL_DB_LINKS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/281.all_db_links.md) 和 [USER_DB_LINKS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/283.user_db_links.md)。
 
 ## 相关文档
 
