--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
@@ -1,6 +1,6 @@
 # 查看已创建的 DBLink
 
-创建 DBLink 后，可以通过 `GV$DBLINK` 视图来查看已创建的 DBLink 的信息，包括创建数据库链接的租户 ID、数据库链接 ID、远端数据库的 IP 和端口号、数据库链接的通信协议、数据库链接当前是否登录以及数据库链接所访问的数据库是否异构等信息。
+创建 DBLink 后，可以通过 `GV$DBLINK` 视图来查看已创建的 DBLink 信息。
 
 ## 操作步骤
 
