--- a/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/1.data-link-introduction.md
+++ b/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/1.data-link-introduction.md
@@ -14,7 +14,7 @@ ODP 作为数据链路上的核心组件，存在多种部署形态：
 
 前两种部署形态，APPServer 访问 ODP 需要经过一层负载均衡组件，负载均衡组件负责 ODP 的高可用和负载均衡。例如 F5 将请求分散到多台 ODP 上。
 
-在产品形态上，ODP 除了代理形态，还有 SDK 形态。SDK 形态以库形式集成到业务代码中，相比代理模式，访问链路上少一跳，性能更好，排查问题链路更短。但存在与业务代码耦合度更高，互相影响，且业务会感知升级操作等缺点。
+在产品形态上，ODP 除了代理形态，还有 SDK 形态。SDK 形态以库形式集成到业务代码中，相比代理模式，访问链路上少一跳，性能更好，排查问题链路更短。但存在与业务代码耦合度更高，互相影响，且 ODP SDK 升级时需要业务重启等缺点。
 
 引入 ODP 后，OceanBase 的数据链路为 APPServer <-> OBProxy  <-> OBServer。APPServer 通过数据库驱动连接 ODP 发送请求，由于 OceanBase 数据库的分布式架构，用户数据以多日志流多副本的方式分布于多个 OBServer 上，ODP 将用户请求转发到最合适的 OBServer 上执行，并将执行结果返回用户。每个 OBServer 也有路由转发的功能，如果发现请求不能在当前节点执行，则会转发请求到正确的 OBServer，该场景需要进行一次远程执行，对请求的 RT（Response Time） 会有一定影响。
 
