--- a/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/1.overview-of-dumping-and-merging.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/1.overview-of-dumping-and-merging.md
@@ -4,4 +4,4 @@ OceanBase 数据库的存储引擎基于 LSM-Tree 架构，数据大体上被分
 
 * 有关转储的详细介绍，参见 [转储](../3.dump-and-merge/2.dump.md)。
 
-* 有关合并的详细介绍，参见 [合并](../3.dump-and-merge/3.merge.md)。
+* 有关合并的详细介绍，参见 [合并](../3.dump-and-merge/3.about-merge.md)。
