--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/5.related-terms.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/5.related-terms.md
@@ -18,7 +18,7 @@
 
 **访问路径**
 
-访问某张表时使用的访问方式，包括主表访问和二级索引访问两类。具体参见 [访问路径](4.sql-optimization/6.query-optimization/1.access-path/1.overview.md)。
+访问某张表时使用的访问方式，包括主表访问和二级索引访问两类。具体参见 [访问路径](4.sql-optimization/6.query-optimization/1.access-path/1.access-path-overview.md)。
 
 **联接顺序**
 
