--- a/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/2.system-variable-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/2.system-variable-overview-of-mysql-mode.md
@@ -64,7 +64,7 @@
 |                                 变量名                                  |                                                           功能描述                                                            |
 |----------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------|
 | [time_zone](127.time_zone-of-mysql-mode.md)             | 用于设置当前租户会话使用的时区，支持 `'+08:00'` 的 Offset 形式和 `Asia/Shanghai` 的地域形式取值。                                                      |
-| [timestamp](128.timestamp-of-mysql-mode.md)             | `TIMESTAMP` 是时间戳，单位为秒，该变量影响 `select now(6)`的结果。                                                                          |
+| [timestamp](128.timestamp-variable-of-mysql-mode.md)             | `TIMESTAMP` 是时间戳，单位为秒，该变量影响 `select now(6)`的结果。                                                                          |
 | [system_time_zone](126.system_time_zone-of-mysql-mode.md)      | 用于设置服务器机器系统时区。                                                                                                            |
 | [error_on_overlap_time](25.error_on_overlap_time-of-mysql-mode.md) | 用于设置夏令时重叠区时间发生歧义时是否作报错处理。                                                                                                 |
 | [nls_language](52.nls_language-of-mysql-mode.md)          | 表示数据库国际化支持中的默认语言，用于提示信息、日期、月份名以及 `NLS_SORT` 和`NLS_DATE_LANGUAGE` 的默认值。 <br>**说明**<br>  该变量当前暂不生效。 |
