中文相对路径修复

--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/4.dbms-crypto-oracle/2.encrypt-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/4.dbms-crypto-oracle/2.encrypt-oracle.md
@@ -39,7 +39,7 @@ DBMS_CRYPTO.ENCRYPT(
 使用说明 
 -------------
 
-* 密码块可以使用链接和填充算法进行修改。链接和填充算法被添加到密码块中，以生成密码组合。密码块链接（CBC）是最常用的链接类型。关于此系统包所支持的密码块链接和填充算法，请参见 [DBMS_CRYPTO 概述](4.dbms-crypto-oracle/1.dbms-crypto-overview-oracle.md)。
+* 密码块可以使用链接和填充算法进行修改。链接和填充算法被添加到密码块中，以生成密码组合。密码块链接（CBC）是最常用的链接类型。关于此系统包所支持的密码块链接和填充算法，请参见 [DBMS_CRYPTO 概述](../4.dbms-crypto-oracle/1.dbms-crypto-overview-oracle.md)。
 
   
 
