--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.dbms-lob-oracle/16.write-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.dbms-lob-oracle/16.write-oracle.md
@@ -38,7 +38,7 @@ buffer   IN             VARCHAR2 CHARACTER SET ANY_CS);
 
 | **参数**  |                                     **解释**                                      |
 |---------|---------------------------------------------------------------------------------|
-| lob_loc | 要写入的内部 `LOB` 的定位符。详细信息请参见 [DBMS_LOB 使用说明](8.dbms-lob-oracle/1.dbms-lob-overview-oracle.md)。 |
+| lob_loc | 要写入的内部 `LOB` 的定位符。详细信息请参见 [DBMS_LOB 使用说明](../8.dbms-lob-oracle/1.dbms-lob-overview-oracle.md)。 |
 | amount  | 要写入的字节数（对于 `BLOB`）或字符数（对于 `CLOB`）。                                              |
 | offset  | 开始读取 `LOB` 的字节数（对于 `BLOB`）或字符数（对于 `CLOB`）的偏移量（原点为 1）。                           |
 | buffer  | 用于写的输入缓冲区。                                                                      |
