--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
@@ -283,7 +283,7 @@ Query OK, 1 row affected
 
 在 OceanBase 数据库的 Oracle 模式中，按照分区策略，分区表可以分为 Range 分区、List 分区、 Hash 分区和组合分区。按照分区维度，分区表可以分为一级分区和二级分区，二级分区是一级分区的二次拆分，因此一级分区表有一个分区键，二级分区表有两个分区键，并且两次拆分的策略可以不一样。
 
-关于分区相关的更多介绍，请参见 [分区](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/4.partition-of-oracle-mode/1.partition-overview-of-oracle-mode.md)。
+关于分区相关的更多介绍，请参见 [分区](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md)。
 
 **Range 分区**
 
