--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.dbms-lob-oracle/3.close-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.dbms-lob-oracle/3.close-oracle.md
@@ -28,7 +28,7 @@ lob_loc    IN OUT NOCOPY CLOB CHARACTER SET ANY_CS);
 
 | **参数**  |                                  **解释**                                  |
 |---------|--------------------------------------------------------------------------|
-| lob_loc | `LOB` 的定位器。详细信息请参见 [DBMS_LOB 使用说明。](8.dbms-lob-oracle/1.dbms-lob-overview-oracle.md) |
+| lob_loc | `LOB` 的定位器。详细信息请参见 [DBMS_LOB 使用说明。](../8.dbms-lob-oracle/1.dbms-lob-overview-oracle.md) |
 
 
 
