--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.dbms-lob-oracle/1.dbms-lob-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.dbms-lob-oracle/1.dbms-lob-overview-oracle.md
@@ -61,7 +61,7 @@ DBMS_LOB 子程序概览
 
 |                            **子程序**                             |                  **描述**                  |
 |----------------------------------------------------------------|------------------------------------------|
-| [APPEND](2.append-oracle)          | 将源 `LOB` 的内容附加到目标 `LOB`。                 |
+| [APPEND](2.append-oracle.md)          | 将源 `LOB` 的内容附加到目标 `LOB`。                 |
 | [CLOSE](3.close-oracle.md)           | 关闭先前打开的内部或外部 `LOB`。                      |
 | [COPY](5.copy-oracle.md)            | 将源内部 `LOB` 的全部或一部分复制到目标内部 `LOB`。         |
 | [CREATETEMPORARY](6.createtemporary-oracle.md) | 在默认的临时表空间中创建一个临时 `BLOB` 或 `CLOB` 及对应的索引。 |
