--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/4.update-a-plan-directive-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/4.update-a-plan-directive-for-oracle-mode.md
@@ -52,4 +52,4 @@
 
 ## 相关文档
 
-[UPDATE_PLAN_DIRECTIVE](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.dbms-resource-manager-oracle/9.update-plan-directive-oracle.md.md)
+[UPDATE_PLAN_DIRECTIVE](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.dbms-resource-manager-oracle/9.update-plan-directive-oracle.md)
