--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/5.delete-a-plan-directive-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/5.delete-a-plan-directive-for-oracle-mode.md
@@ -44,4 +44,4 @@
 
 ## 相关文档
 
-[DELETE_PLAN_DIRECTIVE](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.dbms-resource-manager-oracle/7.delete-plan-directive-oracle.md.md)
+[DELETE_PLAN_DIRECTIVE](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.dbms-resource-manager-oracle/5.delete-consume-group-oracle.md)
