--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
@@ -411,21 +411,21 @@ use $db_name;
 5. 查看合并是否完成。
 
    ```sql
-   MySQL [oceanbase]> SELECT name,value FROM oceanbase.__all_zone WHERE name='frozen_version' OR name='last_merged_version';
-   +---------------------+-------+
-   | name                | value |
-   +---------------------+-------+
-   | frozen_version      |     2 |
-   | last_merged_version |     2 |
-   | last_merged_version |     2 |
-   | last_merged_version |     2 |
-   | last_merged_version |     2 |
-   +---------------------+-------+
+   MySQL [oceanbase]> SELECT FROZEN_SCN, LAST_SCN FROM oceanbase.CDB_OB_MAJOR_COMPACTION;
+   +---------------------+---------------------+
+   | FROZEN_SCN          | LAST_SCN            |
+   +---------------------+---------------------+
+   | 1667239201167716767 | 1667239201167716767 |
+   | 1667239200111919300 | 1667239200111919300 |
+   | 1667239201167452168 | 1667239201167452168 |
+   | 1667239201168053124 | 1667239201168053124 |
+   | 1667239201167520213 | 1667239201167520213 |
+   +---------------------+---------------------+
    ```
 
    <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p> <code>frozen_version</code> 和所有 Zone 的 <code>last_merged_version</code> 的值相等即表示合并完成。  </p>
+    <p> 所有的 <code>FROZEN_SCN</code> 和 <code>LAST_SCN</code> 的值相等即表示合并完成。</p>
    </main>
 
 ### 执行测试
